# sumEngine

./: .gitignore  CMakeLists.txt  README.md
JajoEngine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
JajoEngine/.cache/clangd/index/: Jajo.cpp.8A2854949836D111.idx
JajoEngine/include/: Jajo.h
JajoEngine/src/: Jajo.cpp
sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake
sandbox/src/: main.cpp
